<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="text_title">My Nanodegree Apps!</string>

    <string name="button_spotify">SPOTIFY STREAMER</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_build">BUILD IT BIGGER</string>
    <string name="button_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>

    <string name="spotify_toast">This button will launch my spotify streamer app!</string>
</resources>
