<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material50lightblue"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_title"
            android:textColor="@color/materialblack"
            android:textSize="26sp" />
        <Button
            android:id="@+id/button_spotify"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacityorange"
            android:text="@string/button_spotify"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:onClick="displayToast"/>
        <Button
            android:id="@+id/button_scores"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacityorange"
            android:text="@string/button_scores"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:onClick="displayToast"/>
        <Button
            android:id="@+id/button_library"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacityorange"
            android:text="@string/button_library"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:onClick="displayToast"/>
        <Button
            android:id="@+id/button_build"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacityorange"
            android:text="@string/button_build"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:onClick="displayToast"/>
        <Button
            android:id="@+id/button_reader"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacityorange"
            android:text="@string/button_reader"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:onClick="displayToast"/>
        <Button
            android:id="@+id/button_capstone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/material700red"
            android:text="@string/button_capstone"
            android:textAllCaps="true"
            android:textColor="@color/materialwhite"
            android:textSize="22sp"
            android:onClick="displayToast"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
